# JotaEngine

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  imgui.ini  run.sh
.cache/clangd/index/: Camera.cpp.389732108536BA35.idx  Camera.h.0951919E46AD0A73.idx  Engine.cpp.12102DBF15BD34CB.idx  Engine.h.BBB732F83DC1A0FE.idx  Engine.h.CF23F30C91552167.idx  Entity.cpp.11E12A5E1C159FBC.idx  Entity.h.B2FBDFD4DDD0E790.idx  ImGuiManager.cpp.3A02D7B812F68EAA.idx  ImGuiManager.h.941B7933F5C3B4EB.idx  Mesh.cpp.12645D006489306F.idx  Mesh.cpp.17FCB3BCE5DA3D74.idx  (+227 more)
assets/models/: baller.mtl  crate.glb  knife.glb
include/core/: Camera.h  Engine.h  Entity.h  Game.hpp  Mesh.hpp  ResourceManager.h  Shader.hpp  Texture.hpp  Window.h  Window.hpp
include/engine/: Camera.hpp  GameObject.hpp  GameObjectifier.hpp  InputManager.hpp  Light.hpp  LightManager.hpp  Material.hpp  MeshCreator.hpp  Model.hpp  ObjectManager.hpp  ResourceManager.hpp  Transform.hpp  Vertex.hpp
include/graphics/: Mesh.h  Model.h  ModelLoader.h  Shader.h  Texture.h  Vertex.h
include/objects/: rotating_object.hpp
include/ui/: ImGuiManager.h
shaders/: default.frag  default.vert  white.frag
src/: CMakeLists.txt  main.cpp
src/core/: Camera.cpp  Engine.cpp  Entity.cpp  Game.cpp  Mesh.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/engine/: Camera.cpp  GameObject.cpp  InputManager.cpp  LightManager.cpp  MeshCreator.cpp  Model.cpp  ObjectManager.cpp  ResourceManager.cpp  Transform.cpp
src/graphics/: Mesh.cpp  Model.cpp  ModelLoader.cpp  Shader.cpp  Texture.cpp
src/objects/: rotating_object.cpp
src/ui/: ImGuiManager.cpp
